<resources>
    <string name="app_name">CodeKarma</string>
    <string name="userEmail">com.dylanpoll.CodeKarma.userEmail</string>
    <string name="userPassword">com.dylanpoll.CodeKarma.userPassword</string>
    <string name="saveAccountInfo">com.dylanpoll.CodeKarma.saveAccountInfo</string>
    <string name="saveServiceURL">com.dylanpoll.CodeKarma.saveServiceURL</string>
    <string name="serverMainurl">com.dylanpoll.CodeKarma.serverMainURL</string>
    <string name="discordid">com.dylanpoll.CodeKarma.discordid</string>
    <string name="karma">com.dylanpoll.CodeKarma.karma</string>
    <string name="admin">com.dylanpoll.CodeKarma.admin</string>
    <string name="name">com.dylanpoll.CodeKarma.name</string>
    <string name="roles">com.dylanpoll.CodeKarma.roles</string>
    <string name="questHistory">com.dylanpoll.CodeKarma.questHistory</string>
    <string name="projectHistory">com.dylanpoll.CodeKarma.projectHistory</string>
    <string name="skills">com.dylanpoll.CodeKarma.skills</string>
    <string name="streak">com.dylanpoll.CodeKarma.streak</string>
    <string name="level">com.dylanpoll.CodeKarma.level</string>
</resources>
